welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:13: error: not enough arguments for method marqueSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marqueSol()
           ^MethodsPicture:17: error: not enough arguments for method marqueSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marqueSol()
           ^MethodsPicture:21: error: not enough arguments for method marqueSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marqueSol()
           ^